[package]
name = "pyl"
version = "0.5.2"
edition = "2024"
description = "pyl — fast secret scanner for your codebase"

[lib]
name = "pyl"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "pyl"
path = "src/main.rs"

[features]
default = []
extension-module = ["pyo3/extension-module", "pyo3/abi3-py38"]

[dependencies]
pyo3 = { version = "0.24", optional = true }
regex = "1.12"
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.2"
anyhow = "1.0"
toml = "0.8"

[dev-dependencies]
tempfile = "3.10"
