[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pyl-secret-leaks"
dynamic = ["version"]  # pulled from Cargo.toml automatically
description = "pyl — fast secret scanner for your codebase"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["security", "secrets", "scanner", "sast", "devops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Environment :: Console",
    "Intended Audience :: Developers",
]

[tool.maturin]
bindings = "bin"
